fix z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,6 @@ header {
   font-size: 30px;
   justify-content: center;
   align-items: center;
-  z-index: 10;
 }
 
 header i {
@@ -54,7 +53,6 @@ main {
 .video-controls__title {
   align-self: flex-start;
   color: #fff;
-  z-index: 1;
 }
 
 .video-controls h3 {
@@ -76,6 +74,7 @@ main {
   max-height: var(--control-max-width);
   border: 2px solid #ff5d5d;
   box-shadow: 0 0 0 99999px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: -1;
 }
 
 .video-controls button {
@@ -106,7 +105,7 @@ main {
 
 #vid_container {
   position: absolute;
-  z-index: -1;
+  z-index: -2;
   width: var(--width);
   max-width: var(--max-width);
   height: 100vh;
